--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
 
     <div class="row g-3">
       <!-- 1: Ahmet Turan Özdemir -->
+<!--
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
           <img class="speaker-img" alt="Prof. Dr. Ahmet Turan Özdemir" src="konusmaci1.jpeg">
@@ -444,7 +445,25 @@
           </div>
         </div>
       </div>
-
+-->
+      
+      <!-- 1: Ahmet Turan Özdemir -->
+      <div class="col-lg-6">
+        <div class="card-modern speaker-card">
+          <img class="speaker-img" alt="Göncü Musa Zeytun" src="konusmaci1.jpg">
+          <div>
+            <div class="speaker-name">
+              <a href="https://goncumusazeytun.com/" target="_blank" class="link-light text-decoration-none">
+                Göncü Musa Zeytun 🔗
+              </a>
+            </div>
+            <div class="speaker-role">Dostex Yazılım Kurucusu / 1Fikir1Türkye Organizatörü</div>
+            <p class="speaker-bio mb-0">
+              Yapay zekâ ve ar alanlarında projeler geliştiren bilgisayar mühendisi ve girişimcidir. İşitme engellilerin iletişimini kolaylaştırmayı amaçlayan Dostext yazılımın kurucusu; 1Fikir1Türkiye Organizatörü ve Mentörüdür..
+          </div>
+        </div>
+      </div>
+      
       <!-- 2: Prof. Dr. Oğuz Yoldaş -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
