--- a/index.html
+++ b/index.html
@@ -378,11 +378,11 @@
               <div class="tl-time">13:00 - 13:15</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">1. Konuşma - Prof. Dr. Mehmet Birhan Yılmaz</div>
+              <div class="fw-bold">1. Konuşma - Prof. Dr. Oğuz Yoldaş</div>
               <div class="tl-time">13:15 - 13:35</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">2. Konuşma - İlker Yörü</div>
+              <div class="fw-bold">2. Konuşma - Göncü Musa Zeytun</div>
               <div class="tl-time">13:40 - 14:00</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
@@ -394,20 +394,12 @@
               <div class="tl-time">14:25 - 15:00</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">4. Konuşma - Prof. Dr. Oğuz Yoldaş</div>
+              <div class="fw-bold">4. Konuşma - Prof. Dr. Orhan Görgülü</div>
               <div class="tl-time">15:00 - 15:20</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">5. Konuşma - Prof. Dr. Orhan Görgülü</div>
+              <div class="fw-bold">5. Konuşma - Prof. Dr. İlker Yörü</div>
               <div class="tl-time">15:25 - 15:45</div>
-            </div>
-            <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">6. Konuşma - Prof. Dr. Ahmet Turan Özdemir</div>
-              <div class="tl-time">15:50 - 16:10</div>
-            </div>
-            <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">Kapanış</div>
-              <div class="tl-time">16:10 - 16:30</div>
             </div>
           </div>
         </div>
