--- a/index.html
+++ b/index.html
@@ -394,11 +394,15 @@
               <div class="tl-time">14:25 - 15:00</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">4. Konuşma - Prof. Dr. Orhan Görgülü</div>
+              <div class="fw-bold">4. Konuşma - Prof. Dr. Mehmet Birhan Yılmaz</div>
               <div class="tl-time">15:00 - 15:20</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">5. Konuşma - Prof. Dr. İlker Yörü</div>
+              <div class="fw-bold">5. Konuşma - Prof. Dr. Orhan Görgülü</div>
+              <div class="tl-time">15:25 - 15:45</div>
+            </div>
+            <div class="tl-item d-flex justify-content-between">
+              <div class="fw-bold">6. Konuşma - İlker Yörü</div>
               <div class="tl-time">15:25 - 15:45</div>
             </div>
           </div>
