--- a/index.html
+++ b/index.html
@@ -403,7 +403,11 @@
             </div>
             <div class="tl-item d-flex justify-content-between">
               <div class="fw-bold">6. Konuşma - İlker Yörü</div>
-              <div class="tl-time">15:25 - 15:45</div>
+              <div class="tl-time">15:50 - 16:10</div>
+            </div>
+            <div class="tl-item d-flex justify-content-between">
+              <div class="fw-bold">Kapanış</div>
+              <div class="tl-time">16:30</div>
             </div>
           </div>
         </div>
