--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
       </div>
 -->
       
-      <!-- 1: Ahmet Turan Özdemir -->
+      <!-- 1: Göncü Musa Zeytun -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
           <img class="speaker-img" alt="Göncü Musa Zeytun" src="konusmaci1.jpg">
@@ -459,7 +459,7 @@
             </div>
             <div class="speaker-role">Dostex Yazılım Kurucusu / 1Fikir1Türkye Organizatörü</div>
             <p class="speaker-bio mb-0">
-              Yapay zekâ ve ar alanlarında projeler geliştiren bilgisayar mühendisi ve girişimcidir. İşitme engellilerin iletişimini kolaylaştırmayı amaçlayan Dostext yazılımın kurucusu; 1Fikir1Türkiye Organizatörü ve Mentörüdür..
+              Yapay zekâ ve ar alanlarında projeler geliştiren bilgisayar mühendisi ve girişimcidir. İşitme engellilerin iletişimini kolaylaştırmayı amaçlayan Dostext yazılımın kurucusu; 1Fikir1Türkiye Organizatörü ve Mentördür.
           </div>
         </div>
       </div>
