--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <!-- Butonlar en alta taşındı -->
           <div class="mt-4 d-flex gap-2 justify-content-center">
             <a href="#program" class="btn btn-brand btn-lg px-4">Program</a>
-            <a href="#konusmacilar" class="btn btn-outline-light btn-lg px-4">Konuşmacılar</a>
+            <a href="https://forms.gle/pDcLMb9CJNhDjLCi8" class="btn btn-outline-light btn-lg px-4">Bilet</a>
           </div>
         </div>
       </div>
@@ -457,9 +457,9 @@
                 Göncü Musa Zeytun 🔗
               </a>
             </div>
-            <div class="speaker-role">Dostex Yazılım Kurucusu / 1Fikir1Türkye Organizatörü</div>
+            <div class="speaker-role">Dostex Yazılım Kurucusu / 1Fikir1Türkiye Organizatörü</div>
             <p class="speaker-bio mb-0">
-              Yapay zekâ ve ar alanlarında projeler geliştiren bilgisayar mühendisi ve girişimcidir. İşitme engellilerin iletişimini kolaylaştırmayı amaçlayan Dostext yazılımın kurucusu; 1Fikir1Türkiye Organizatörü ve Mentördür.
+              Yapay zekâ ve ar alanlarında projeler geliştiren bilgisayar mühendisi ve girişimcidir. İşitme engellilerin iletişimini kolaylaştırmayı amaçlayan Dostext yazılımın kurucusu; 1Fikir1Türkiye Organizatörü ve Mentörüdür.
           </div>
         </div>
       </div>
