--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <!-- Butonlar en alta taşındı -->
           <div class="mt-4 d-flex gap-2 justify-content-center">
             <a href="#program" class="btn btn-brand btn-lg px-4">Program</a>
-            <a href="https://forms.gle/pDcLMb9CJNhDjLCi8" class="btn btn-outline-light btn-lg px-4">Bilet</a>
+            <a href="https://forms.gle/pDcLMb9CJNhDjLCi8" class="btn btn-outline-light btn-lg px-4">Bilet Sorgu</a>
           </div>
         </div>
       </div>
