--- a/index.html
+++ b/index.html
@@ -427,26 +427,7 @@
     <h2 class="section-title mb-4">Sahnedeki isimler</h2>
 
     <div class="row g-3">
-      <!-- 1: Ahmet Turan Özdemir -->
-<!--
-      <div class="col-lg-6">
-        <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Prof. Dr. Ahmet Turan Özdemir" src="konusmaci1.jpeg">
-          <div>
-            <div class="speaker-name">
-              <a href="https://www.linkedin.com/in/ahmet-turan-ozdemir" target="_blank" class="link-light text-decoration-none">
-                Prof. Dr. Ahmet Turan Özdemir
-              </a>
-            </div>
-            <div class="speaker-role">Aspilsan Enerji Genel Müdürü / CEO</div>
-            <p class="speaker-bio mb-0">
-              Bilkent Üniversitesi Elektrik-Elektronik Mühendisliği mezunu. Enerji teknolojileri vr savunma sanayii alanında 20+ yıl deneyim. Aspilsan Enerji'de lityum-iyon batarya teknolojilerinin geliştirilmesine liderlik ediyor.
-            </p>
-          </div>
-        </div>
-      </div>
--->
-      
+
       <!-- 1: Göncü Musa Zeytun -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
@@ -457,9 +438,9 @@
                 Göncü Musa Zeytun 🔗
               </a>
             </div>
-            <div class="speaker-role">Dostex Yazılım Kurucusu / 1Fikir1Türkiye Organizatörü</div>
+            <div class="speaker-role">Dostext Yazılım Kurucusu / 1Fikir1Türkiye Organizatörü</div>
             <p class="speaker-bio mb-0">
-              Yapay zekâ ve ar alanlarında projeler geliştiren bilgisayar mühendisi ve girişimcidir. İşitme engellilerin iletişimini kolaylaştırmayı amaçlayan Dostext yazılımın kurucusu; 1Fikir1Türkiye Organizatörü ve Mentörüdür.
+              Yapay zekâ ve ar alanlarında projeler geliştiren Halk'ın girişimcisidir. İşitme engellilerin iletişimini kolaylaştırmayı amaçlayan Dostext yazılımın kurucusu; 1Fikir1Türkiye Organizatörü ve Mentörüdür.
           </div>
         </div>
       </div>
