--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           <img src="bigtedx.png" alt="TEDx Adana Fen Logo" style="max-width:60%; height:auto;">
         </div>
         <h1 class="display-5 fw-bold" style="color:#e62b1e;">
-          BACK TO FUTURE <br>
+          2026 <br>
         </h1>
       </div>
 
@@ -275,7 +275,7 @@
           </div>
           <div class="mt-4 d-flex gap-2 justify-content-center">
             <a href="#program" class="btn btn-brand btn-lg px-4">Program</a>
-            <a href="https://forms.gle/pDcLMb9CJNhDjLCi8" class="btn btn-outline-light btn-lg px-4">Bilet Sorgu</a>
+            <a href=#konusmacilar class="btn btn-outline-light btn-lg px-4">Geçmiş Etkinlik</a>
           </div>
         </div>
       </div>
