--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       --brand-dark: #0b0b0d;
       --brand-gray: #1a1a1d;
       --text-muted: #a0a4ad;
+      --brand-yellow: #e1ad01; 
       --card-bg: #111114;
       --card-border: #1f1f24;
     }
@@ -563,13 +564,13 @@
         <div class="card-modern p-4 h-100">
           <div class="team-group-title mb-3">Ana Kadro</div>
           <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
-            <div class="team-pill" style="border: 2px solid #e1ad01; color: #e1ad01; grid-column: span 2;">Ali Bera Mert</div>
-            <div class="team-pill" style="border-color: var(--brand-yellow); color: var(--brand-yellow);">Kuzey Çelik</div>
-            <div class="team-pill" style="border-color: var(--brand-yellow); color: var(--brand-yellow);">Duru Körkün</div>
-            <div class="team-pill" style="border-color: var(--brand-yellow); color: var(--brand-yellow);">Melek Su Kara</div>
-            <div class="team-pill" style="border-color: var(--brand-yellow); color: var(--brand-yellow);">Öykü Dağ</div>
-            <div class="team-pill" style="border-color: var(--brand-yellow); color: var(--brand-yellow);">Nehir İmeci</div>
-            <div class="team-pill" style="border-color: var(--brand-yellow); color: var(--brand-yellow);">Alisa Ece Arabacı</div>
+            <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Ali Bera Mert</div>
+            <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Kuzey Çelik</div>
+            <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Duru Körkün</div>
+            <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Melek Su Kara</div>
+            <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Öykü Dağ</div>
+            <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Nehir İmeci</div>
+            <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Alisa Ece Arabacı</div>
           </div>
         </div>
       </div>
@@ -608,11 +609,11 @@
           <div class="card-modern p-4 h-100">
             <div class="team-group-title mb-3">Ana Kadro</div>
             <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
-              <div class="team-pill" style="border: 2px solid #e1ad01; color: #e1ad01; grid-column: span 2;">Mehmet Ulaç Girgin</div>
-              <div class="team-pill" style="border-color: var(--brand-yellow);">Alper Kırsay</div>
-              <div class="team-pill" style="border-color: var(--brand-yellow);">Sude Söğütlü</div>
-              <div class="team-pill" style="border-color: var(--brand-yellow);">Ali Bera Mert</div>
-              <div class="team-pill" style="border-color: var(--brand-yellow);">Yusuf Tuna Ceylan</div>
+              <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Mehmet Ulaç Girgin</div>
+              <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Alper Kırsay</div>
+              <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Sude Söğütlü</div>
+              <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Ali Bera Mert</div>
+              <div class="team-pill" style="border: 2px solid var(--brand-yellow); color: #ffffff;">Yusuf Tuna Ceylan</div>
             </div>
           </div>
         </div>
@@ -671,8 +672,11 @@
           <div class="mt-auto">
             <div class="section-kicker mb-3">Ana Sponsorumuz</div>
             <div class="d-flex align-items-center gap-3">
-              <a href="#" target="_blank">
-                <img src="sponsor.png" alt="Sponsor Logosu" class="sponsor-logo img-fluid rounded" style="background:#fff; padding:5px; max-height: 60px;">
+              <a href="https://www.sudiseafood.com/" target="_blank" 
+                 style="border: 2px solid #e62b1e; padding: 8px; border-radius: 8px; display: inline-block;">
+                <img src="sponsor.png" alt="Sponsor Logosu" 
+                     class="img-fluid" 
+                     style="max-height: 60px; height: auto;">
               </a>
               <span class="text-muted small">Sponsor olmak ve detaylı bilgi almak için bizimle iletişime geçebilirsiniz.</span>
             </div>
