--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
           <div class="divider my-3"></div>
 
           <div class="mb-2 fw-bold text-white">📍 Etkinlik Konumu</div>
-          <a class="link-light text-decoration-none" href="https://maps.app.goo.gl/g1g6Jt6Vz1H9QG8a8" target="_blank">
+          <a class="link-light text-decoration-none" href="https://maps.app.goo.gl/mnhdArtaWfc98HgV6" target="_blank">
             Adana Fen Lisesi (Haritada Aç 🔗)
           </a>
         </div>
