--- a/index.html
+++ b/index.html
@@ -246,8 +246,9 @@
         <div class="d-flex gap-2">
           <img src="bigtedx.png" alt="TEDx Adana Fen Logo" style="max-width:60%; height:auto;">
         </div>
-        <h1 class="display-5 fw-bold" style="color:#e62b1e;">
-          2026 <br>
+        <h1 class="display-5 fw-bold" 
+            style="color:#e62b1e; margin-left: 40px;">
+          2026
         </h1>
       </div>
 
